<?xml version="1.0"?>
<package>
  <name>roboy_face</name>
  <version>0.0.1</version>
  <description>roboy_face package to animate Roboy's face in Unity.</description>

  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roboy_control_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roboy_control_msgs</run_depend>
  <run_depend>message_generation</run_depend>

</package>
